# Process_communication

./: CMakeLists.txt  child.c  parent.c
.devcontainer/: Dockerfile  devcontainer.json
